output/test/5blocks-fcall.err
output prefix: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/test/llvm/5blocks-fcall
llvmas: /Users/cmk/llvm/bin/llvm-as
llc: /Users/cmk/llvm/bin/llc
cc: gcc
codegen: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/decafexpr
stdlib: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/decaf-stdlib.c
generating llvm code:/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/decafexpr ... ok
LogError: Redefining variable in same scope
LogError: Redefining variable in same scope
LogError: Redefining variable in same scope
LogError: Redefining variable in same scope
; ModuleID = 'C'

declare void @print_int(i32)

define i32 @main() {
entry:
  %y = alloca i32
  %x = alloca i32
  store i32 1, i32* %x
  store i32 100, i32* %y
  %x1 = load i32, i32* %x
  call void @print_int(i32 %x1)
  %y2 = load i32, i32* %y
  call void @print_int(i32 %y2)
  store i32 2, i32* %x
  %x3 = load i32, i32* %x
  call void @print_int(i32 %x3)
  %y4 = load i32, i32* %y
  call void @print_int(i32 %y4)
  store i32 3, i32* %x
  %x5 = load i32, i32* %x
  call void @print_int(i32 %x5)
  %y6 = load i32, i32* %y
  call void @print_int(i32 %y6)
  store i32 4, i32* %x
  %x7 = load i32, i32* %x
  call void @print_int(i32 %x7)
  %y8 = load i32, i32* %y
  call void @print_int(i32 %y8)
  store i32 5, i32* %x
  %x9 = load i32, i32* %x
  call void @print_int(i32 %x9)
  %y10 = load i32, i32* %y
  call void @print_int(i32 %y10)
  ret i32 0
}
assembling to bitcode:/Users/cmk/llvm/bin/llvm-as "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/test/llvm/5blocks-fcall.llvm" -o "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/test/llvm/5blocks-fcall.llvm.bc" ... failed (1)
/Users/cmk/llvm/bin/llvm-as: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/test/llvm/5blocks-fcall.llvm:1:1: error: expected top-level entity
LogError: Redefining variable in same scope
^
converting to native code:/Users/cmk/llvm/bin/llc "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/test/llvm/5blocks-fcall.llvm.bc" -o "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/test/llvm/5blocks-fcall.llvm.s" ... failed (1)
/Users/cmk/llvm/bin/llc: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/test/llvm/5blocks-fcall.llvm.bc: error: Could not open input file: No such file or directory
linking:gcc -o "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/test/llvm/5blocks-fcall.llvm.exec" "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/test/llvm/5blocks-fcall.llvm.s" "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/decaf-stdlib.c" ... failed (1)
clang: error: no such file or directory: '/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/test/llvm/5blocks-fcall.llvm.s'
running:/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/test/llvm/5blocks-fcall.llvm.exec ...Traceback (most recent call last):
  File "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/llvm-run", line 172, in <module>
    result &= run("running", "%s.llvm.exec" % (out_prefix), ".run", None, out_prefix)
  File "/Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/answer/llvm-run", line 90, in run
    retval = subprocess.call(shlex.split(cmd), stdin=infile, stdout=outoutfile, stderr=outerrfile)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 522, in call
    return Popen(*popenargs, **kwargs).wait()
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 710, in __init__
    errread, errwrite)
  File "/usr/local/Cellar/python/2.7.10_2/Frameworks/Python.framework/Versions/2.7/lib/python2.7/subprocess.py", line 1335, in _execute_child
    raise child_exception
OSError: [Errno 2] No such file or directory
